--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </div>
         <div class="hero-content">
             <h1>障がいのある方も<br>ご家族にも</h1>
-            <p>相談支援事業では、障がいのある方だけではなく、ご家族や関係機関の</p>
-            <p>さまざまなお悩みやお困りごとについて、ご相談を受け付けております。</p>
-            <p>誰もが より豊かな生活を送れるように支援させていただきます。</p>
+            <p>相談支援事業では、障がいのある方だけではなく、<br>ご家族や関係機関の
+            <p>さまざまなお悩みやお困りごとについて、<br>ご相談を受け付けております。</p>
+            <p>誰もが より豊かな生活を送れるように<br>支援させていただきます。</p>
             <a href="#contact" class="btn-main">お問い合わせはこちら</a>
         </div>
     </section>
