--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="hero-content">
             <h1>障がいのある方も<br>ご家族にも</h1>
             <p>相談支援事業では、障がいのある方だけではなく、<br>ご家族や関係機関の
-            <p>さまざまなお悩みやお困りごとについて、<br>ご相談を受け付けております。</p>
+            さまざまなお悩みやお困りごとについて、<br>ご相談を受け付けております。</p>
             <p>誰もが より豊かな生活を送れるように<br>支援させていただきます。</p>
             <a href="#contact" class="btn-main">お問い合わせはこちら</a>
         </div>
