--- a/index.html
+++ b/index.html
@@ -46,11 +46,18 @@
                 <source src="picmov/hero-movie.mp4" type="video/mp4">
             </video>
         </div>
-        <div class="hero-content">
+<div class="hero-content">
             <h1>障がいのある方も<br>ご家族にも</h1>
-            <p>相談支援事業では、障がいのある方だけではなく、<br>ご家族や関係機関の
-            さまざまなお悩みやお困りごとについて、<br>ご相談を受け付けております。</p>
-            <p>誰もが より豊かな生活を送れるように<br>支援させていただきます。</p>
+            
+            <p>
+                相談支援事業では、障がいのある方だけではなく、<br class="pc-br">
+                ご家族や関係機関のさまざまなお悩みや<br class="sp-br">
+                お困りごとについて、<br class="pc-br">
+                ご相談を受け付けております。<br class="pc-br">
+                誰もがより豊かな生活を送れるように<br class="sp-br">
+                支援させていただきます。
+            </p>
+            
             <a href="#contact" class="btn-main">お問い合わせはこちら</a>
         </div>
     </section>
