--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
             
             <p>
                 相談支援事業では、障がいのある方だけではなく、<br class="pc-br">
-                ご家族や関係機関のさまざまなお悩みや<br class="sp-br">
-                お困りごとについて、<br class="pc-br">
-                ご相談を受け付けております。<br class="pc-br">
+                ご家族や関係機関のさまざまなお悩みや<br class="pc-br"><br class="sp-br">
+                お困りごとについて、ご相談を受け付けております。<br class="pc-br"><br class="sp-br">
                 誰もがより豊かな生活を送れるように<br class="sp-br">
                 支援させていただきます。
             </p>
