--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <p>
                 相談支援事業では、障がいのある方だけではなく、<br class="pc-br">
                 ご家族や関係機関のさまざまなお悩みや<br class="pc-br"><br class="sp-br">
-                お困りごとについて、ご相談を受け付けております。<br class="pc-br"><br class="sp-br">
-                誰もがより豊かな生活を送れるように<br class="sp-br">
-                支援させていただきます。
+                お困りごとについて、<br class="pc-br"><br class="sp-br">ご相談を受け付けております。<br class="pc-br"><br class="sp-br">
+                誰もがより豊かな生活を<br class="sp-br">
+                送れるように支援させていただきます。
             </p>
             
             <a href="#contact" class="btn-main">お問い合わせはこちら</a>
