--- a/index.html
+++ b/index.html
@@ -192,16 +192,14 @@
         <!-- ① 上部：想いとイメージ画像 -->
         <div class="about-grid">
             <div class="about-text">
-                <h3>ご利用者様お一人おひとりに<br>寄り添うケアを</h3>
-                <p>
-                    相談支援事業では、障がいのある方だけではなく、<br>
-                    ご家族や関係機関のさまざまなお悩みやお困りごとについて、<br>
-                    ご相談を受け付けております。
-                </p>
-                <p>
-                    誰もがより豊かな生活を送れるように支援させていただきます。<br>
-                    まずはお気軽にご相談ください。
-                </p>
+                <h3>相談員のサポート力が自慢です！</h3>
+                <p> 支援方法を学ぶ下記研修を修了した<br>
+                    相談支援専門員を配置しております。</p>
+                <p>・主任相談支援専門院研修</p>
+                <p>・相談支援従事者現任研修</p>
+                <p>・強度行動障害支援者養成研修（基礎/実践）</p>
+                <p>・医療的ケア児等コーディネーター養成研修</p>
+                <p>・精神障がい者支援の障がい特性と支援技法研修</p>
             </div>
             <div class="about-img">
                 <img src="picmov/alone.png" alt="一人で悩む必要はありません">
