--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <!-- ① 上部：想いとイメージ画像 -->
         <div class="about-grid">
             <div class="about-text">
-                <h3>相談員のサポート力が自慢です！</h3>
+                <h3>相談員のサポート力が<br class="sp-br">自慢です！</h3>
                 <p> 支援方法を学ぶ下記研修を修了した<br>
                     相談支援専門員を配置しております。</p>
                 <p>・主任相談支援専門院研修</p>
