--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@
                         FAX: 093-383-1328
                     </dd>
                     
+                    <dt>許認可</dt>
+                    <dd>指定特定相談支援事業 4037 700 608</dd>
+                    <dd>指定障がい児相談支援事業 4077 700 179</dd>
+
                     <dt>メール</dt>
                     <dd>iks.080101.iks@gmail.com</dd>
                 </dl>
