--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
                     <dd>iks.080101.iks@gmail.com</dd>
 
                     <dt>許認可</dt>
-                    <dd>指定特定相談支援事業 4037 700 608</dd>
-                    <dd>指定障がい児相談支援事業 4077 700 179</dd>
+                    <dd>指定特定相談支援事業 4037 700 608<br>
+                        指定障がい児相談支援事業 4077 700 179</dd>
                 </dl>
             </div>
 
