--- a/index.html
+++ b/index.html
@@ -235,9 +235,8 @@
 
                     <dt>許認可</dt>
                     <!-- ▼▼▼ class="license-text" を追加 ▼▼▼ -->
-                    <dd class="license-text">
-                        指定特定相談支援事業 4037 700 608<br>
-                        指定障がい児相談支援事業 4077 700 179
+                    <dd class="license-no">指定特定相談支援事業 4037 700 608</dd>
+                    <dd class="license-no">指定障がい児相談支援事業 4077 700 179</dd>
                     </dd>
                 </dl>
             </div>
