--- a/index.html
+++ b/index.html
@@ -234,10 +234,14 @@
                     <dd>iks.080101.iks@gmail.com</dd>
 
                     <dt>許認可</dt>
-                    <!-- ▼▼▼ class="license-text" を追加 ▼▼▼ -->
-                    <dd class="license-no">指定特定相談支援事業 4037 700 608</dd>
-                    <dd class="license-no">指定障がい児相談支援事業 4077 700 179</dd>
-                    </dd>
+                        <dd class="license">
+                            <span class="license-name">指定特定相談支援事業</span>
+                            <span class="license-num">4037 700 608</span>
+                        </dd>
+                        <dd class="license">
+                            <span class="license-name">指定障がい児相談支援事業</span>
+                            <span class="license-num">4077 700 179</span>
+                        </dd>
                 </dl>
             </div>
 
