--- a/index.html
+++ b/index.html
@@ -236,11 +236,17 @@
                     <dt>許認可</dt>
                         <dd class="license">
                             <span class="license-name">指定特定相談支援事業</span>
-                            <span class="license-num">4037 700 608</span>
+                            <span class="license-num">
+                            <span class="n4">4037</span>
+                            <span class="n6">700 608</span>
+                            </span>
                         </dd>
                         <dd class="license">
                             <span class="license-name">指定障がい児相談支援事業</span>
-                            <span class="license-num">4077 700 179</span>
+                            <span class="license-num">
+                            <span class="n4">4037</span>
+                            <span class="n6">700 608</span>
+                            </span>
                         </dd>
                 </dl>
             </div>
