--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&display=swap" rel="stylesheet">
     <!-- CSS -->
-    <link rel="stylesheet" href="style-20260118-2.css">
-
+    <link rel="stylesheet" href="style.css?v=20260118-2">
 </head>
 <body>
     <!-- オープニングアニメーション -->
@@ -310,7 +309,7 @@
         </div>
 
         <!-- 3. コピーライト -->
-        <p class="copyright">&copy; 2026 株式会社iK All Rights Reserved.</p>
+        <p class="copyright">&copy; 2026 株式会社iK All Rights Reserved.test</p>
     </div>
 </footer>
 
