--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <li><a href="#contact">お問い合わせ</a></li>
         </ul>
     </nav>
-    <div class="menu-btn" id="menu-toggle">☰</div>
+    <div class="menu-btn" id="menu-toggle">
+    <span></span>
+    </div>
 </header>
 
 <!-- ヒーローセクション -->
