--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <li><a href="#contact">お問い合わせ</a></li>
         </ul>
     </nav>
-    <div class="menu-btn" id="menu-toggle">
-    <span></span>
-    </div>
+        <div class="menu-btn" id="menu-toggle">
+        <span></span>
+        </div>
 </header>
 
 <!-- ヒーローセクション -->
@@ -327,16 +327,18 @@
     const navMenu = document.getElementById('nav-menu');
 
     menuBtn.addEventListener('click', () => {
-        navMenu.classList.toggle('active');
-        menuBtn.textContent = navMenu.classList.contains('active') ? '✕' : '☰';
+    navMenu.classList.toggle('active');
+    menuBtn.classList.toggle('is-open', navMenu.classList.contains('active'));
     });
 
+
     document.querySelectorAll('.pc-nav a').forEach(link => {
-        link.addEventListener('click', () => {
-            navMenu.classList.remove('active');
-            menuBtn.textContent = '☰';
-        });
+    link.addEventListener('click', () => {
+        navMenu.classList.remove('active');
+        menuBtn.classList.remove('is-open');
+      });
     });
+
 
     const observer = new IntersectionObserver((entries) => {
         entries.forEach(entry => {
