topへ戻るボタン

--- a/index.html
+++ b/index.html
@@ -301,6 +301,8 @@
       <p class="copyright">&copy; 2026 株式会社iK All Rights Reserved.</p>
     </div>
   </footer>
+    <!-- TOPへ戻るボタン -->
+    <button id="to-top" aria-label="トップへ戻る">▲</button>
 </body>
     <script src="script.js?v=20260119-1" defer></script>
 </html>
