--- a/index.html
+++ b/index.html
@@ -273,6 +273,10 @@
         <textarea name="message" rows="5" placeholder="ご質問やご相談内容をご記入ください" required></textarea>
       </div>
       <button type="submit" class="submit-btn">送信する</button>
+      <p class="form-note">
+        ※ 通常、1〜2営業日以内にご返信いたします。<br>
+        ※ ご入力いただいた個人情報は、お問い合わせ対応以外の目的では使用いたしません。
+      </p>
     </form>
   </section>
 
