--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
       </div>
       <button type="submit" class="submit-btn">送信する</button>
         <p class="form-note">
-            <span class="form-note-line">※ 通常1〜2営業日以内にご返信いたします。</span>
-            <span class="form-note-line">※ 個人情報はお問い合わせ対応以外に使用いたしません。</span>
+            <span class="form-note-line">※ 通常1〜2営業日以内に返信いたします。</span>
+            <span class="form-note-line">※ 個人情報はお問い合わせ対応以外に<br>使用いたしません。</span>
         </p>
     </form>
   </section>
