電話・メール導線

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
     <div class="menu-btn" id="menu-toggle" aria-label="メニューを開閉" role="button" tabindex="0">
       <span></span>
     </div>
+    <div class="header-contact">
+        <a href="tel:093-383-1327" class="header-tel">TEL. 093-383-1327</a>
+        <a href="mailto:iks.080101.iks@gmail.com" class="header-mail">メール相談</a>
+    </div>
+
   </header>
 
   <!-- ヒーローセクション -->
