--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
       <p>
         相談支援事業では、障がいのある方<br class="sp-br">だけではなく、<br class="pc-br">
-        ご家族や関係機関<br class="sp-br">のさまざまなお悩みや<br class="pc-br">
-        お困りごと<br class="sp-br">について、ご相談を受け付けております。<br class="pc-br"><br class="sp-br">
-        誰もがより豊かな生活を送れるよう<br class="sp-br">に支援させていただきます。
+        ご家族や関係機関の<br class="sp-br">さまざまなお悩みや<br class="pc-br">
+        お困りごとに<br class="sp-br">ついてご相談を受け付けております。<br class="pc-br"><br class="sp-br">
+        誰もがより豊かな生活を送れるように<br class="sp-br">支援させていただきます。
       </p>
 
       <a href="#contact" class="btn-main">お問い合わせはこちら</a>
