--- a/index.html
+++ b/index.html
@@ -78,31 +78,31 @@
 
     <div class="services-grid">
       <div class="service-card">
-        <img src="picmov/health.png" alt="健康">
+        <img src="picmov/health.png" alt="健康" loading="lazy" width="300" height="180">
         <h3>健康に暮らしたい</h3>
       </div>
       <div class="service-card">
-        <img src="picmov/illness.png" alt="病気">
+        <img src="picmov/illness.png" alt="病気" loading="lazy" width="300" height="180">
         <h3>病気のことが心配</h3>
       </div>
       <div class="service-card">
-        <img src="picmov/house.png" alt="住まい">
+        <img src="picmov/house.png" alt="住まい" loading="lazy" width="300" height="180">
         <h3>住むところを探してほしい</h3>
       </div>
       <div class="service-card">
-        <img src="picmov/counseling.png" alt="相談">
+        <img src="picmov/counseling.png" alt="相談" loading="lazy" width="300" height="180">
         <h3>悩みや相談を聞いてほしい</h3>
       </div>
       <div class="service-card">
-        <img src="picmov/hikky.png" alt="引きこもり">
+        <img src="picmov/hikky.png" alt="引きこもり" loading="lazy" width="300" height="180">
         <h3>引きこもりから脱出したい</h3>
       </div>
       <div class="service-card">
-        <img src="picmov/cityoffice.png" alt="手続き">
+        <img src="picmov/cityoffice.png" alt="手続き" loading="lazy" width="300" height="180">
         <h3>役所などの手続きが分からない</h3>
       </div>
       <div class="service-card">
-        <img src="picmov/job.png" alt="就職">
+        <img src="picmov/job.png" alt="就職" loading="lazy" width="300" height="180">
         <h3>就職のことや将来のことを相談したい</h3>
       </div>
     </div>
@@ -208,7 +208,7 @@
       </div>
 
       <div class="about-img">
-        <img src="picmov/alone.png" alt="一人で悩む必要はありません">
+        <img src="picmov/alone.png" alt="一人で悩む必要はありません" loading="lazy" width="450" height="300">
       </div>
     </div>
 
@@ -251,7 +251,7 @@
         </div>
 
         <div class="company-map">
-          <img src="picmov/地図.png" alt="アクセスマップ">
+          <img src="picmov/地図.png" alt="アクセスマップ" loading="lazy" width="300" height="300">
         </div>
       </div>
     </div>
