--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="format-detection" content="telephone=no">
+
   <title>株式会社iK</title>
 
   <!-- ファビコン -->
@@ -294,7 +296,11 @@
     <div class="footer-container">
       <div class="footer-logo-area">
         <h3>株式会社iK</h3>
-        <p class="footer-address">〒802-0831 北九州市小倉南区八重洲町11-20 2階</p>
+        <p class="footer-address">
+            <a href="https://maps.google.com/?q=〒802-0831 北九州市小倉南区八重洲町11-20" target="_blank" rel="noopener">
+                〒802-0831 北九州市小倉南区八重洲町11-20 2階
+            </a>
+        </p>
       </div>
 
       <div class="footer-contact-area">
