--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
   </footer>
     <!-- TOPへ戻るボタン -->
     <button id="to-top" aria-label="トップへ戻る">▲</button>
+  <script src="script.js?v=20260119-1" defer></script>
 </body>
-    <script src="script.js?v=20260119-1" defer></script>
+</html>
 </html>
