--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>株式会社iK</title>
 
   <!-- ファビコン -->
-  <link rel="icon" href="picmov/iK-logo.png">
+  <link rel="icon" href="picmov/iK-logo.png" type="image/png">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+  <div id="top"></div>
   <!-- オープニングアニメーション -->
   <div id="opening-splash">
     <div id="splash-logo">iK相談支援センター</div>
@@ -26,7 +27,7 @@
 
   <header>
     <div class="logo">
-      <a href="#">iK相談支援センター</a>
+      <a href="#top">iK相談支援センター</a>
     </div>
 
     <nav class="pc-nav" id="nav-menu">
