--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
 
   <header>
     <div class="logo">
-      <a href="#top">iK相談支援センター</a>
+    <a href="#top" class="logo-link" aria-label="トップへ戻る（株式会社iK）">
+        <img src="picmov/iK-logo.png" alt="株式会社iK ロゴ" class="logo-img" width="32" height="32">
+        <span class="logo-text">iK相談支援センター</span>
+    </a>
     </div>
+
 
     <nav class="pc-nav" id="nav-menu">
       <ul>
@@ -295,9 +299,11 @@
   <!-- フッター -->
   <footer>
     <div class="footer-container">
-      <div class="footer-logo-area">
+        <div class="footer-logo-area">
+        <img src="picmov/iK-logo.png" alt="株式会社iK ロゴ" class="footer-logo" width="56" height="56">
         <h3>株式会社iK</h3>
         <p class="footer-address">
+
             <a href="https://maps.google.com/?q=〒802-0831 北九州市小倉南区八重洲町11-20" target="_blank" rel="noopener">
                 〒802-0831 北九州市小倉南区八重洲町11-20 2階
             </a>
