--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       <ul>
         <li><a href="#services">相談内容</a></li>
         <li><a href="#flow">相談の流れ</a></li>
+            <!-- ★ PCナビ中央ロゴ（追加） -->
+        <li class="nav-logo">
+        <a href="#top" aria-label="トップへ戻る（iK相談支援センター）">iK相談支援センター</a>
+        </li>
         <li><a href="#about">私たちについて</a></li>
         <li><a href="#contact">お問い合わせ</a></li>
       </ul>
