--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         <li><a href="#flow">相談の流れ</a></li>
             <!-- ★ PCナビ中央ロゴ（追加） -->
         <li class="nav-logo">
-        <a href="#top" aria-label="トップへ戻る（iK相談支援センター）">iK相談支援センター</a>
+        <a href="#top" aria-label="トップへ戻る（株式会社iK）">
+            <img src="picmov/iK-logo.png" alt="" class="nav-logo-img" width="28" height="28">
+        </a>
         </li>
         <li><a href="#about">私たちについて</a></li>
         <li><a href="#contact">お問い合わせ</a></li>
