--- a/index.html
+++ b/index.html
@@ -27,12 +27,8 @@
 
   <header>
     <div class="logo">
-    <a href="#top" class="logo-link" aria-label="トップへ戻る（株式会社iK）">
-        <img src="picmov/iK-logo.png" alt="株式会社iK ロゴ" class="logo-img" width="32" height="32">
-        <span class="logo-text">iK相談支援センター</span>
-    </a>
+    <a href="#top">iK相談支援センター</a>
     </div>
-
 
     <nav class="pc-nav" id="nav-menu">
       <ul>
@@ -40,9 +36,10 @@
         <li><a href="#flow">相談の流れ</a></li>
             <!-- ★ PCナビ中央ロゴ（追加） -->
         <li class="nav-logo">
-        <a href="#top" aria-label="トップへ戻る（株式会社iK）">
-            <img src="picmov/iK-logo.png" alt="" class="nav-logo-img" width="28" height="28">
-        </a>
+        <li class="nav-logo">
+            <a href="#top" aria-label="トップへ戻る（株式会社iK）">
+                <img src="picmov/iK-logo.png" alt="" class="nav-logo-img" width="40" height="40">
+            </a>
         </li>
         <li><a href="#about">私たちについて</a></li>
         <li><a href="#contact">お問い合わせ</a></li>
