コード整理

--- a/index.html
+++ b/index.html
@@ -75,40 +75,42 @@
 
   <!-- サービス案内 -->
   <section id="services" class="services-bg fade-in">
-    <div class="section-title">
-      <h2>お困りではありませんか？</h2>
-      <span>相談内容</span>
-    </div>
+    <div class="container">
+        <div class="section-title">
+            <h2>お困りではありませんか？</h2>
+            <span>相談内容</span>
+        </div>
 
-    <div class="services-grid">
-      <div class="service-card">
-        <img src="picmov/health.png" alt="健康" loading="lazy" width="300" height="180">
-        <h3>健康に暮らしたい</h3>
-      </div>
-      <div class="service-card">
-        <img src="picmov/illness.png" alt="病気" loading="lazy" width="300" height="180">
-        <h3>病気のことが心配</h3>
-      </div>
-      <div class="service-card">
-        <img src="picmov/house.png" alt="住まい" loading="lazy" width="300" height="180">
-        <h3>住むところを探してほしい</h3>
-      </div>
-      <div class="service-card">
-        <img src="picmov/counseling.png" alt="相談" loading="lazy" width="300" height="180">
-        <h3>悩みや相談を聞いてほしい</h3>
-      </div>
-      <div class="service-card">
-        <img src="picmov/hikky.png" alt="引きこもり" loading="lazy" width="300" height="180">
-        <h3>引きこもりから脱出したい</h3>
-      </div>
-      <div class="service-card">
-        <img src="picmov/cityoffice.png" alt="手続き" loading="lazy" width="300" height="180">
-        <h3>役所などの手続きが分からない</h3>
-      </div>
-      <div class="service-card">
-        <img src="picmov/job.png" alt="就職" loading="lazy" width="300" height="180">
-        <h3>就職のことや将来のことを相談したい</h3>
-      </div>
+        <div class="services-grid">
+        <div class="service-card">
+            <img src="picmov/health.png" alt="健康" loading="lazy" width="300" height="180">
+            <h3>健康に暮らしたい</h3>
+        </div>
+        <div class="service-card">
+            <img src="picmov/illness.png" alt="病気" loading="lazy" width="300" height="180">
+            <h3>病気のことが心配</h3>
+        </div>
+        <div class="service-card">
+            <img src="picmov/house.png" alt="住まい" loading="lazy" width="300" height="180">
+            <h3>住むところを探してほしい</h3>
+        </div>
+        <div class="service-card">
+            <img src="picmov/counseling.png" alt="相談" loading="lazy" width="300" height="180">
+            <h3>悩みや相談を聞いてほしい</h3>
+        </div>
+        <div class="service-card">
+            <img src="picmov/hikky.png" alt="引きこもり" loading="lazy" width="300" height="180">
+            <h3>引きこもりから脱出したい</h3>
+        </div>
+        <div class="service-card">
+            <img src="picmov/cityoffice.png" alt="手続き" loading="lazy" width="300" height="180">
+            <h3>役所などの手続きが分からない</h3>
+        </div>
+        <div class="service-card">
+            <img src="picmov/job.png" alt="就職" loading="lazy" width="300" height="180">
+            <h3>就職のことや将来のことを相談したい</h3>
+        </div>
+        </div>
     </div>
   </section>
 
