--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </section>
 
   <!-- サービス案内 -->
-  <section id="services" class="services-bg fade-in">
+  <section id="services" class="services-bg fade-in section">
     <div class="container">
         <div class="section-title">
             <h2>お困りではありませんか？</h2>
@@ -115,7 +115,7 @@
   </section>
 
   <!-- 流れ -->
-  <section id="flow" class="fade-in">
+  <section id="flow" class="fade-in section">
     <div class="section-title">
       <h2>Flow</h2>
       <span>支援開始までの流れ</span>
@@ -196,7 +196,7 @@
   </section>
 
   <!-- 私たちについて -->
-  <section id="about" class="fade-in">
+  <section id="about" class="fade-in section">
     <div class="section-title">
       <h2>About Us</h2>
       <span>私たちについて</span>
@@ -264,7 +264,7 @@
   </section>
 
   <!-- フォーム部分 -->
-  <section id="contact" class="fade-in">
+  <section id="contact" class="fade-in section">
     <div class="section-title">
       <h2>CONTACT</h2>
       <span>お問い合わせ</span>
