プライバシーポリシー改良

--- a/privacy.html
+++ b/privacy.html
@@ -116,32 +116,23 @@
 
     <section class="policy-section">
       <h2>2. 利用目的</h2>
-      <p>取得した個人情報は、次の目的の範囲で利用します。</p>
+      <p>取得した個人情報は、次の目的の範囲で利用いたします。</p>
       <ul>
-        <li>お問い合わせへの回答、連絡、必要なご案内</li>
         <li>相談支援に関する対応および連絡</li>
-        <li>サービス品質向上のための参考（個人が特定されない形での集計・分析）</li>
+        <li>お問い合わせへの回答、連絡、必要な対応</li>
+        <li>相談支援の品質向上のための参考（個人が特定されない形での集計・分析）</li>
       </ul>
     </section>
 
     <section class="policy-section">
       <h2>3. 第三者提供</h2>
       <p>
-        当社は、法令に基づく場合を除き、ご本人の同意なく個人情報を第三者に提供しません。
+        当社は、法令に基づく場合を除き、ご本人の同意なく個人情報を第三者に提供いたしません。
       </p>
     </section>
 
     <section class="policy-section">
-      <h2>4. 委託について（フォーム送信）</h2>
-      <p>
-        当社のお問い合わせフォームは、フォーム送信サービス（Formspree）を利用しています。<br>
-        送信された内容は、当社が返信対応を行うために、同サービスを経由して当社へ転送されます。<br>
-        なお、同サービスの取扱いは当該サービスのプライバシーポリシーも適用されます。
-      </p>
-    </section>
-
-    <section class="policy-section">
-      <h2>5. 安全管理措置</h2>
+      <h2>4. 安全管理措置</h2>
       <p>
         当社は、個人情報への不正アクセス、漏えい、改ざん、滅失等を防止するため、
         適切な安全管理措置を講じます。
@@ -149,15 +140,15 @@
     </section>
 
     <section class="policy-section">
-      <h2>6. 開示・訂正・削除等の請求</h2>
+      <h2>5. 開示・訂正・削除等の請求</h2>
       <p>
         ご本人から、個人情報の開示・訂正・利用停止・削除等のお申し出があった場合は、
-        ご本人確認のうえ、法令に従い適切に対応します。
+        ご本人確認のうえ、法令に従い適切に対応いたします。
       </p>
     </section>
 
     <section class="policy-section">
-      <h2>7. お問い合わせ窓口</h2>
+      <h2>6. お問い合わせ窓口</h2>
       <p>
         本方針に関するお問い合わせは、当社までご連絡ください。<br>
         電話：093-383-1327
@@ -165,13 +156,13 @@
     </section>
 
     <section class="policy-section">
-      <h2>8. 改定</h2>
+      <h2>7. 改定</h2>
       <p>
         当社は、法令の変更や運用状況に応じて、本方針を改定する場合があります。
       </p>
     </section>
 
-    <p class="policy-meta">制定日：2026年1月20日</p>
+    <p class="policy-meta">制定日：2026年1月1日</p>
     <a class="policy-back" href="index.html#contact">お問い合わせへ戻る</a>
   </main>
 
