--- a/index.html
+++ b/index.html
@@ -322,12 +322,10 @@
         <div class="contact-row">
           <span class="contact-label">Mail</span>
           <a href="mailto:iks.080101.iks@gmail.com">iks.080101.iks@gmail.com</a>
+          <span class="divider">/</span>
+          <span class="contact-label">Privacy Policy</span>
+          <a href="privacy.html" target="_blank" rel="noopener">個人情報保護方針</a>
         </div>
-        <div class="contact-row">
-            <span class="contact-label">Privacy Policy</span>
-            <a href="privacy.html" target="_blank" rel="noopener">個人情報保護方針</a>
-        </div>
-      </div>
 
       <p class="copyright">&copy; 2026 株式会社iK All Rights Reserved.</p>
     </div>
