送信メッセージ

--- a/index.html
+++ b/index.html
@@ -291,12 +291,16 @@
 
       <p class="form-note">
         <span class="form-note-line">※ 通常1〜2営業日以内に返信いたします。</span>
-        <p class="form-privacy">
-            <a href="privacy.html" class="form-privacy-link" target="_blank" rel="noopener">個人情報保護方針（プライバシーポリシー）</a>
-        </p>
+        <span class="form-note-line">※ 個人情報はお問い合わせ対応以外に<br>使用いたしません。</span>
+      </p>
 
+      <p class="form-privacy">
+        <a href="privacy.html" class="form-privacy-link" target="_blank" rel="noopener">個人情報保護方針（プライバシーポリシー）</a>
       </p>
     </form>
+
+    <!-- 送信結果表示（ページ遷移なし送信の結果を表示） -->
+    <div id="form-result" class="form-result" aria-live="polite"></div>
   </section>
 
   <!-- フッター -->
@@ -322,10 +326,13 @@
         <div class="contact-row">
           <span class="contact-label">Mail</span>
           <a href="mailto:iks.080101.iks@gmail.com">iks.080101.iks@gmail.com</a>
-          <span class="divider">/</span>
-          <span class="contact-label">Privacy Policy</span>
+        </div>
+
+        <div class="contact-row">
+          <span class="contact-label">Policy</span>
           <a href="privacy.html" target="_blank" rel="noopener">個人情報保護方針</a>
         </div>
+      </div>
 
       <p class="copyright">&copy; 2026 株式会社iK All Rights Reserved.</p>
     </div>
