--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <li><a href="#flow">相談の流れ</a></li>
         <li><a href="#about">私たちについて</a></li>
         <li><a href="#contact">お問い合わせ</a></li>
+        <!-- SPハンバーガー内：控えめな電話導線（PCでは非表示） -->
+        <li class="sp-only-tel"><a href="tel:093-383-1327" class="sp-tel-link">📞 電話で相談する（093-383-1327）</a></li>
       </ul>
     </nav>
 
