--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
         <li><a href="#flow">相談の流れ</a></li>
         <li><a href="#about">私たちについて</a></li>
         <li><a href="#contact">お問い合わせ</a></li>
-        <!-- SPハンバーガー内：控えめな電話導線（PCでは非表示） -->
-        <li class="sp-only-tel"><a href="tel:093-383-1327" class="sp-tel-link">📞 電話で相談する</a></li>
       </ul>
     </nav>
 
@@ -299,7 +297,7 @@
       </p>
 
       <p class="form-privacy">
-        <a href="privacy.html" class="form-privacy-link" target="_blank" rel="noopener">個人情報保護方針（プライバシーポリシー）</a>
+        <a href="privacy.html" class="form-privacy-link" target="_blank" rel="noopener">個人情報保護方針（<span class="nowrap">プライバシーポリシー</span>）</a>
       </p>
     </form>
 
