--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 
   <!-- 流れ -->
   <section id="flow" class="fade-in section">
-    <div class="section-title">
+    <div class="container">
+      <div class="section-title">
       <h2>Flow</h2>
       <span>支援開始までの流れ</span>
     </div>
@@ -197,7 +198,8 @@
 
   <!-- 私たちについて -->
   <section id="about" class="fade-in section">
-    <div class="section-title">
+    <div class="container">
+      <div class="section-title">
       <h2>About Us</h2>
       <span>私たちについて</span>
     </div>
@@ -265,7 +267,8 @@
 
   <!-- フォーム部分 -->
   <section id="contact" class="fade-in section">
-    <div class="section-title">
+    <div class="container">
+      <div class="section-title">
       <h2>CONTACT</h2>
       <span>お問い合わせ</span>
     </div>
@@ -305,7 +308,8 @@
 
   <!-- フッター -->
   <footer>
-    <div class="footer-container">
+    <div class="container">
+      <div class="footer-container">
       <div class="footer-logo-area">
         <h3>株式会社iK</h3>
         <p class="footer-address">
@@ -335,6 +339,7 @@
       </div>
 
       <p class="copyright">&copy; 2026 株式会社iK All Rights Reserved.</p>
+      </div>
     </div>
   </footer>
 
