--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
 
   <!-- 流れ -->
   <section id="flow" class="fade-in section">
-    <div class="container">
-      <div class="section-title">
+    <div class="section-title">
       <h2>Flow</h2>
       <span>支援開始までの流れ</span>
     </div>
@@ -198,8 +197,7 @@
 
   <!-- 私たちについて -->
   <section id="about" class="fade-in section">
-    <div class="container">
-      <div class="section-title">
+    <div class="section-title">
       <h2>About Us</h2>
       <span>私たちについて</span>
     </div>
@@ -208,11 +206,14 @@
       <div class="about-text">
         <h3>相談員のサポート力が<br class="sp-br">自慢です！</h3>
         <p>支援方法を学ぶ下記研修を修了した<br>相談支援専門員を配置しております。</p>
-        <p>・主任相談支援専門院研修</p>
-        <p>・相談支援従事者現任研修</p>
-        <p>・強度行動障害支援者養成研修（基礎/実践）</p>
-        <p>・医療的ケア児等コーディネーター養成研修</p>
-        <p>・精神障がい者支援の障がい特性と支援技法研修</p>
+        
+        <ul class="training-list" aria-label="研修一覧">
+          <li>主任相談支援専門院研修</li>
+          <li>相談支援従事者現任研修</li>
+          <li>強度行動障害支援者養成研修（基礎/実践）</li>
+          <li>医療的ケア児等コーディネーター養成研修</li>
+          <li>精神障がい者支援の障がい特性と支援技法研修</li>
+        </ul>
       </div>
 
       <div class="about-img">
@@ -267,8 +268,7 @@
 
   <!-- フォーム部分 -->
   <section id="contact" class="fade-in section">
-    <div class="container">
-      <div class="section-title">
+    <div class="section-title">
       <h2>CONTACT</h2>
       <span>お問い合わせ</span>
     </div>
@@ -308,8 +308,7 @@
 
   <!-- フッター -->
   <footer>
-    <div class="container">
-      <div class="footer-container">
+    <div class="footer-container">
       <div class="footer-logo-area">
         <h3>株式会社iK</h3>
         <p class="footer-address">
@@ -320,26 +319,29 @@
       </div>
 
       <div class="footer-contact-area">
-        <div class="contact-row">
-          <span class="contact-label">TEL</span>
-          <a href="tel:093-383-1327" class="tel-number">093-383-1327</a>
-          <span class="divider">/</span>
-          <span class="contact-label">FAX</span>
-          <span class="fax-number">093-383-1328</span>
-        </div>
-        <div class="contact-row">
-          <span class="contact-label">Mail</span>
-          <a href="mailto:iks.080101.iks@gmail.com">iks.080101.iks@gmail.com</a>
-        </div>
+        
+        <div class="footer-contact-grid" aria-label="連絡先">
+          <div class="contact-row contact-row-tel">
+            <span class="contact-label">TEL</span>
+            <a href="tel:093-383-1327" class="tel-number">093-383-1327</a>
+            <span class="divider">/</span>
+            <span class="contact-label">FAX</span>
+            <span class="fax-number">093-383-1328</span>
+          </div>
 
-        <div class="contact-row">
-          <span class="contact-label">Policy</span>
-          <a href="privacy.html" target="_blank" rel="noopener">個人情報保護方針</a>
+          <div class="contact-row contact-row-mail">
+            <span class="contact-label">Mail</span>
+            <a href="mailto:iks.080101.iks@gmail.com">iks.080101.iks@gmail.com</a>
+          </div>
+
+          <div class="contact-row contact-row-policy">
+            <span class="contact-label">Policy</span>
+            <a href="privacy.html" target="_blank" rel="noopener">個人情報保護方針</a>
+          </div>
         </div>
       </div>
 
       <p class="copyright">&copy; 2026 株式会社iK All Rights Reserved.</p>
-      </div>
     </div>
   </footer>
 
