--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         </div>
       </div>
 
-      <p class="copyright">&copy; 2026 株式会社iK All Rights Reserved.</p>
+      <p class="footer-copyright">&copy; 2026 株式会社iK All Rights Reserved.</p>
     </div>
   </footer>
 
