--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <ul>
         <li><a href="#services">相談内容</a></li>
         <li><a href="#flow">相談の流れ</a></li>
-        <li><a href="#about">私たちについて</a></li>
+        <li><a href="about.html">事業所案内</a></li>
         <li><a href="#contact">お問い合わせ</a></li>
       </ul>
     </nav>
@@ -219,6 +219,10 @@
       <div class="about-img">
         <img src="picmov/alone.png" alt="一人で悩む必要はありません" loading="lazy" width="450" height="300">
       </div>
+    </div>
+
+    <div class="about-page-cta">
+      <a href="about.html" class="btn-sub">事業所案内（運営方針・職員配置・加算体制）を見る</a>
     </div>
 
     <div class="company-info-area">
