--- a/index.html
+++ b/index.html
@@ -74,7 +74,24 @@
   </section>
 
   <!-- サービス案内 -->
-  <section id="services" class="services-bg fade-in section">
+  
+  <!-- 対象者案内 -->
+  <section class="target-users section">
+    <div class="container">
+      <h2 class="target-title">対象の方</h2>
+
+      <ul class="target-list">
+        <li>心身に障がいがある方</li>
+        <li>心身に障いがある児童（支給決定は保護者の方）</li>
+      </ul>
+
+      <p class="target-note">
+        ※ 御自身が対象者であるか不明な場合は御相談下さい。
+      </p>
+    </div>
+  </section>
+
+<section id="services" class="services-bg fade-in section">
     <div class="container">
         <div class="section-title">
             <h2>お困りではありませんか？</h2>
