--- a/index.html
+++ b/index.html
@@ -321,7 +321,9 @@
       </p>
 
       <p class="form-privacy">
-        <a href="privacy.html" class="form-privacy-link" target="_blank" rel="noopener">個人情報保護方針（<span class="nowrap">プライバシーポリシー</span>）</a>
+        <a href="contact_policy.html" class="form-privacy-link" target="_blank" rel="noopener">
+          お問い合わせ個人情報の取り扱いについて
+        </a>
       </p>
     </form>
 
@@ -357,7 +359,7 @@
 
           <div class="contact-row contact-row-policy">
             <span class="contact-label">Policy</span>
-            <a href="privacy.html" target="_blank" rel="noopener">個人情報保護方針</a>
+            <a href="privacypolicy.html" target="_blank" rel="noopener">プライバシーポリシー</a>
           </div>
         </div>
       </div>
