--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -3,7 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="format-detection" content="telephone=no">
+
   <title>プライバシーポリシー | iK相談支援センター</title>
+
+  <!-- ファビコン -->
+  <link rel="icon" href="picmov/iK-logo.png" type="image/png">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="page-about">
