--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -73,6 +73,34 @@
         <p>開所日 令和8年1月1日</p>
         <p>担当 伊藤</p>       
   </div>
+
+  <div class="footer-contact-area">
+        <div class="footer-contact-grid" aria-label="連絡先">
+          <div class="contact-row contact-row-tel">
+            <span class="contact-label">TEL</span>
+            <a href="tel:093-383-1327" class="tel-number">093-383-1327</a>
+            <span class="divider">/</span>
+            <span class="contact-label">FAX</span>
+            <span class="fax-number">093-383-1328</span>
+          </div>
+
+          <div class="contact-row contact-row-mail">
+            <span class="contact-label">Mail</span>
+            <a href="mailto:iks.080101.iks@gmail.com">iks.080101.iks@gmail.com</a>
+          </div>
+
+          <div class="contact-row contact-row-policy">
+            <span class="contact-label">Policy</span>
+            <a href="privacy.html" target="_blank" rel="noopener">個人情報保護方針</a>
+          </div>
+        </div>
+      </div>
+
+      <p class="footer-copyright">&copy; 2026 株式会社iK All Rights Reserved.</p>
+    </div>
+  </footer>
+
+  <script src="script.js?v=20260119-1" defer></script>
 </section>
 </body>
 </html>
