--- a/index.html
+++ b/index.html
@@ -317,12 +317,11 @@
 
       <p class="form-note">
         <span class="form-note-line">※ 通常1〜2営業日以内に返信いたします。</span>
-        <span class="form-note-line">※ 個人情報はお問い合わせ対応以外に<br>使用いたしません。</span>
       </p>
 
       <p class="form-privacy">
         <a href="contact_policy.html" class="form-privacy-link" target="_blank" rel="noopener">
-          お問い合わせ個人情報の取り扱いについて
+          お問い合わせに関する個人情報の取り扱いについて
         </a>
       </p>
     </form>
