--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -37,22 +37,22 @@
 
     <h3>2. 個人情報の取得</h3>
         <p>当事業所は、利用者や従業員から以下のような個人情報を適法かつ公正な手段で取得します。</p>
-        <P>氏名、住所、生年月日、電話番号などの基本情報</P>
-        <p>健康状態、障害の程度、緊急連絡先等の医療・福祉関連情報</P>
-        <p>雇用契約に関する情報（履歴書、雇用契約書等</P>
+        <P>・氏名、住所、生年月日、電話番号などの基本情報</P>
+        <p>・健康状態、障害の程度、緊急連絡先等の医療・福祉関連情報</P>
+        <p>・雇用契約に関する情報（履歴書、雇用契約書等</P>
 
     <h3>3. 個人情報の利用目的</h3>
         <p>当事業所は、取得した個人情報を以下の目的で利用します。</p>
-        <p>就労支援サービスの提供</p>
-        <p>雇用契約の管理、給与の支払い等の人事業務</p>
-        <p>利用者の安全管理や緊急時対応のための情報提供</p>
-        <p>その他、法律に基づく対応</p>
+        <p>・就労支援サービスの提供</p>
+        <p>・雇用契約の管理、給与の支払い等の人事業務</p>
+        <p>・利用者の安全管理や緊急時対応のための情報提供</p>
+        <p>・その他、法律に基づく対応</p>
 
     <h3>4. 個人情報の第三者提供</h3>
         <p>当事業所は、次の場合を除き、利用者や従業員の個人情報を第三者に提供することはありません。</p>
-        <p>本人の同意がある場合</p> 
-        <p>法令に基づく場合</p> 
-        <p>人の生命、身体または財産の保護のために必要がある場合</p>
+        <p>・本人の同意がある場合</p> 
+        <p>・法令に基づく場合</p> 
+        <p>・人の生命、身体または財産の保護のために必要がある場合</p>
 
     <h3>5. 個人情報の管理</h3>
         <p>当事業所は、利用者および従業員の個人情報を厳重に管理し、漏洩、紛失、改ざん、不正アクセスなどのリスクを防止するため、適切なセキュリティ対策を講じます。</p>
@@ -66,12 +66,12 @@
 
     <h3>8. お問い合わせ窓口</h3>
         <p>個人情報に関するお問い合わせ、開示請求、その他のご相談は、以下の窓口までご連絡ください。</p>
-        <p>事業所名 iK相談支援センター</p>
-        <p>所在地 福岡県北九州市小倉南区八重洲町11-20 2階</p>
-        <p>電話1: 080-9106-0625 / 電話2 070-3133-3592</p>
-        <p>FAX: 093-383-1328</p>
-        <p>開所日 令和8年1月1日</p>
-        <p>担当 伊藤</p>       
+        <p>・事業所名: iK相談支援センター</p>
+        <p>・所在地: 福岡県北九州市小倉南区八重洲町11-20 2階</p>
+        <p>・電話1: 080-9106-0625 / 電話2 070-3133-3592</p>
+        <p>・FAX: 093-383-1328</p>
+        <p>・開所日: 令和8年1月1日</p>
+        <p>・担当: 伊藤</p>       
   </div>
 
   <div class="footer-contact-area">
@@ -91,7 +91,7 @@
 
           <div class="contact-row contact-row-policy">
             <span class="contact-label">Policy</span>
-            <a href="privacy.html" target="_blank" rel="noopener">個人情報保護方針</a>
+            <a href="privacy.html" target="_blank" rel="noopener">プライバシーポリシー</a>
           </div>
         </div>
       </div>
