--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -73,8 +73,19 @@
         <p>・開所日: 令和8年1月1日</p>
         <p>・担当: 伊藤</p>       
   </div>
+</section>
+<footer>
+    <div class="footer-container">
+      <div class="footer-logo-area">
+        <h3>株式会社iK</h3>
+        <p class="footer-address">
+          <a href="https://maps.google.com/?q=〒802-0831 北九州市小倉南区八重洲町11-20" target="_blank" rel="noopener">
+            〒802-0831 北九州市小倉南区八重洲町11-20 2階
+          </a>
+        </p>
+      </div>
 
-  <div class="footer-contact-area">
+      <div class="footer-contact-area">
         <div class="footer-contact-grid" aria-label="連絡先">
           <div class="contact-row contact-row-tel">
             <span class="contact-label">TEL</span>
@@ -101,6 +112,5 @@
   </footer>
 
   <script src="script.js?v=20260119-1" defer></script>
-</section>
 </body>
 </html>
