--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="header-contact">
-      <a href="tel:093-383-1327" class="header-tel">TEL. 093-383-1327</a>
+      <p class="header-tel">TEL. 093-383-1327</p>
     </div>
   </header>
 
