--- a/contct-privacy.html
+++ b/contct-privacy.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="format-detection" content="telephone=no" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="format-detection" content="telephone=no">
+
   <title>個人情報保護方針 | 株式会社iK</title>
 
+  <!-- ファビコン -->
   <link rel="icon" href="picmov/iK-logo.png" type="image/png">
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css?v=20260122-1">
+</head>
+
+<body>
+  <div id="top"></div>
+
+  <!-- オープニングアニメーション -->
+  <div id="opening-splash">
+    <img src="picmov/iK-logo.png" alt="株式会社iK ロゴ" id="splash-mark">
+    <div id="splash-logo">iK相談支援センター</div>
+  </div>
+
+  <header>
+    <div class="logo">
+      <a href="#top">iK相談支援センター</a>
+    </div>
+
+    <nav class="pc-nav" id="nav-menu">
+      <ul>
+        <li><a href="#services">相談内容</a></li>
+        <li><a href="#flow">相談の流れ</a></li>
+        <li><a href="about.html">事業所案内</a></li>
+        <li><a href="#contact">お問い合わせ</a></li>
+      </ul>
+    </nav>
+
+    <!-- ハンバーガー（CSS描画：span + 擬似要素） -->
+    <div class="menu-btn" id="menu-toggle" aria-label="メニューを開閉" role="button" tabindex="0">
+      <span></span>
+    </div>
+
+    <div class="header-contact">
+      <p class="header-tel">TEL. 093-383-1327</p>
+    </div>
+  </header>
 
   <!-- 既存CSSを流用（デザイン統一） -->
   <link rel="stylesheet" href="style.css?v=20260118-2">
